fix dark mode

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -7,7 +7,7 @@
   @apply border-border rounded-lg border;
 
   & [data-rehype-pretty-code-title] {
-    @apply flex-1 rounded-t-lg border-b py-3.5 pl-5 text-xs text-neutral-700;
+    @apply text-tertiary-foreground dark:text-muted-foreground flex-1 rounded-t-lg border-b py-3.5 pl-5 text-xs;
   }
   & pre {
     @apply overflow-x-auto rounded-t-none font-mono;
@@ -88,11 +88,12 @@ code[data-theme*=" "] span {
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --color-tertiary-foreground: var(--tertiary-foreground);
 }
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
+  --background: oklch(0.99 0 0);
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
@@ -110,6 +111,7 @@ code[data-theme*=" "] span {
   --border: oklch(0.922 0 0);
   --input: oklch(0.922 0 0);
   --ring: oklch(0.708 0 0);
+  --tertiary-foreground: oklch(0.37 0 0);
   --chart-1: oklch(0.646 0.222 41.116);
   --chart-2: oklch(0.6 0.118 184.704);
   --chart-3: oklch(0.398 0.07 227.392);
@@ -144,6 +146,7 @@ code[data-theme*=" "] span {
   --border: oklch(1 0 0 / 10%);
   --input: oklch(1 0 0 / 15%);
   --ring: oklch(0.556 0 0);
+  --tertiary-foreground: oklch(0.87 0 0);
   --chart-1: oklch(0.488 0.243 264.376);
   --chart-2: oklch(0.696 0.17 162.48);
   --chart-3: oklch(0.769 0.188 70.08);
@@ -168,6 +171,6 @@ code[data-theme*=" "] span {
   }
 
   p {
-    @apply text-neutral-700;
+    @apply text-tertiary-foreground;
   }
 }
